# snkv

./: .gitignore  Makefile  README.md  memory.json  tests.json  valgrind.json
.github/workflows/: c-cpp.yml  publish.yml
docs/: api.html  benchmark.html  examples.html  index.html  ttl.html
docs/proposals/: encryption.md  iterator-seek-reverse.md
examples/: encryption.c  iterators.c  new_apis.c  vector.c
include/: kvstore.h  kvstore_vec.h
python/: README.md  pyproject.toml  snkv_module.c
python/examples/: all_apis.py  encryption.py  multiprocess.py  new_apis.py
python/snkv/: __init__.py
python/tests/: test_enc.py  test_enc_lifecycle.py  test_new_apis.py
scripts/: gen_snkv_header.sh
src/: kvstore.c  kvstore_enc.c  kvstore_enc.h  kvstore_vec.c
src/monocypher/: monocypher.c
tests/: test_benchmark.c  test_enc.c  test_iterator_reverse.c  test_new_apis.c  test_vec.c
