[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snkv"
version = "0.7.0"
requires-python = ">=3.8"
description = "Crash-safe embedded key-value store — encryption (XChaCha20-Poly1305), TTL, reverse iterators, iterator seek, put_if_absent, column families, ACID transactions, vector search (HNSW)"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
vector = ["usearch>=2.9", "numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/hash-anu/snkv"
Documentation = "https://hash-anu.github.io/snkv/api.html#lang=py"

[tool.setuptools.packages.find]
where = ["."]
include = ["snkv*"]

[tool.setuptools.package-data]
snkv = ["py.typed", "_snkv.pyi"]

# ── cibuildwheel ────────────────────────────────────────────────────────────
[tool.cibuildwheel]
# Build CPython 3.8 – 3.13; skip 32-bit and musl builds
build  = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip   = "*-win32 *-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
